--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "towers-express",
-  "version": "1.0.2",
+  "version": "1.0.2a",
   "type": "module",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
